# axum-resp-api

./: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile-alpine  Dockerfile-dev  Dockerfile-microsoft  Makefile  docker-compose.yml
.github/workflows/: build.yml  rust.yml
src/: api_response.rs  email.rs  error_response.rs  main.rs
src/config/: email_config.rs  mod.rs
src/handlers/: email_handler.rs  index_handler.rs  mod.rs  pdf_handler.rs
src/middlewares/: mod.rs  my_middleware.rs
src/times/: mod.rs  my_time.rs
