[package]
name = "axum-resp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "axum-resp"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.4", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
dotenv = "0.15.0"
envy = "0.4.2"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tower = { version = "0.4.13", features = ["full"] }
tower-http = "0.5.1"
hyper = { version = "1.1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = "0.1.0"
chrono = { version = "0.4", features = [] }
chrono-tz = "0.8.5"
openssl = { version = "0.10", features = ["vendored"] }
